--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <title>Diginex Take Home Challenge</title>
+    <meta
+      name="description"
+      content="Diginex Take Home Challenge - Interactive web application"
+    />
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="shortcut icon" href="/favicon.ico" />
@@ -9,10 +14,10 @@
     <meta name="apple-mobile-web-app-title" content="Diginex" />
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Diginex Take Home Challenge</title>
+    <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
-    <main id="diginex"></main>
+    <main id="diginex" role="main" aria-label="Main application content"></main>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
